--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     
 
-    <div id="rasa-chat-widget" data-websocket-url="http://65.108.243.249:5005"></div>
+    <div id="rasa-chat-widget" data-websocket-url="http://localhost:5005"></div>
 <script src="https://unpkg.com/@rasahq/rasa-chat" type="application/javascript"></script>
 </body>
 </html>
