--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
               {
                 customData: { language: "en" },
                 socketUrl: "http://localhost:5005",
+                initPayload: 'get started'
                 // add other props here
               },
               null
