updates on button and slider

--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
               {
                 customData: { language: "en" },
                 socketUrl: "http://localhost:5005",
-                initPayload: 'get started'
+                initPayload: 'get started',
+                title:'Welcome to Royce store' 
                 // add other props here
               },
               null
