--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             window.WebChat.default(
               {
                 customData: { language: "en" },
-                socketUrl: "https://rasa-com.roycesurvey.co.ke:80",
+                socketUrl: "https://rasa-com.roycesurvey.co.ke",
                 initPayload: 'get started',
                 title:'Welcome to Royce store' 
                 // add other props here
